initial commit of cost/benefit expert mode